--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <body>
 
 <h1 style="color:#9a1e32;">Hello, HTML world!</h1>
+<h1 style="color:#F4D03F;">Hello, HTML world!</h1>
+<h1 style="color:#2ECC71;">Hello, HTML world!</h1>
 
 </body>
 </html>
