--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>P-J-website</title>
 <body>
 
 <h1 style="color:#9a1e32;">Hello, HTML world!</h1>
-<h1 style="color:#F4D03F;">Hello, HTML world!</h1>
-<h1 style="color:#2ECC71;">Hello, HTML world!</h1>
+<!- this is a comment ->
+<h2 style="color:#F4D03F;">Hello, HTML world!</h2>
+<h3 style="color:#2ECC71;">Hello, HTML world!</h3>
 
 </body>
 </html>
