--- a/index.html
+++ b/index.html
@@ -8,10 +8,28 @@
 	{
 		background-color: lightgray;
 	}
+	h1
+	{
+		font-size: 40px;
+		font-family: verdana;
+		color:#9a1e32;
+		text-align: center;
+	}
+	h2
+	{
+		color: teal;		
+	}
+	p
+	{
+		border: 2px solid black;
+	}
 
-<h1 style="color:#9a1e32;">Hello, HTML world!</h1>
-<h2 style="color:#F4D03F;">Hello, HTML world!</h2>
-<h3 style="color:#2ECC71;">Hello, HTML world!</h3>
+</style>
+
+<h1>This is a placeholder title</h1>
+<h2>This is another title</h2>
+<p>Here will be lots of good content</p>
+
 
 </body>
 </html>
